Revert AFN.java to previous iteration